buildkite pipeline wdio

--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -4,6 +4,6 @@ steps:
     key: build
 
   - label: ":test_tube: Test"
-    command: "npm test"
+    command: "npm i && npm test"
     key: test
     depends_on: build
