--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "readme": "WendriverIO Integration with [BrowserStack](https://www.browserstack.com)",
   "description": "Selenium examples for WebdriverIO and BrowserStack Automate",
   "scripts": {
-    "test": "node_modules/.bin/wdio conf/test.conf.js",
+    "test": "wdio conf/test.conf.js",
     "local": "npx wdio conf/local-test.conf.js"
   },
   "repository": {
