buildkite local testing binary

--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -1,6 +1,10 @@
 steps:
-  - label: "Test"
+  - label: "Local test"
     commands:
-    - "npm i"
-    - "npx wdio conf/local-test.conf.js"
-    key: test
+      - wget "https://www.browserstack.com/browserstack-local/BrowserStackLocal-darwin-x64.zip"
+      - unzip BrowserStackLocal-darwin-x64.zip
+      - ./BrowserStackLocal --key $BROWSERSTACK_ACCESS_KEY --daemon start
+      - "npm i"
+      - "npx wdio conf/local-test.conf.js"
+      - ./BrowserStackLocal --key $BROWSERSTACK_ACCESS_KEY --daemon stop
+      key: "local test"
