--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -1,5 +1,6 @@
 steps:
   - label: "Local test"
     commands:
+    - "node -v"
     - "wget \"https://www.browserstack.com/browserstack-local/BrowserStackLocal-darwin-x64.zip\""
     key: "local test"
