--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -2,5 +2,5 @@ steps:
   - label: "Local test"
     commands:
     - "node -v"
-    - "wget \"https://www.browserstack.com/browserstack-local/BrowserStackLocal-darwin-x64.zip\""
+    - "wget https://www.browserstack.com/browserstack-local/BrowserStackLocal-darwin-x64.zip"
     key: "local test"
