--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -1,7 +1,10 @@
 steps:
   - label: "Local_test"
     commands:
-      - "node -v"
       - wget "https://www.browserstack.com/browserstack-local/BrowserStackLocal-linux-x64.zip"
-      - "npm i"
+      - unzip BrowserStackLocal-darwin-x64.zip
+      - ./BrowserStackLocal --key $BROWSERSTACK_ACCESS_KEY --daemon start
+      - npm i
+      - npx wdio conf/local-test.conf.js
+      - ./BrowserStackLocal --key $BROWSERSTACK_ACCESS_KEY --daemon stop
     key: "local_test"
