--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -1,12 +1,12 @@
 steps:
   - label: "Local_test"
-    commands:
-      - wget "https://www.browserstack.com/browserstack-local/BrowserStackLocal-linux-x64.zip"
-      - wait
-      - unzip BrowserStackLocal-darwin-x64.zip
-      - wait
-      - ./BrowserStackLocal --key $BROWSERSTACK_ACCESS_KEY --daemon start
-      - npm i
-      - npx wdio conf/local-test.conf.js
-      - ./BrowserStackLocal --key $BROWSERSTACK_ACCESS_KEY --daemon stop
+    - command: wget "https://www.browserstack.com/browserstack-local/BrowserStackLocal-linux-x64.zip"
+    - wait:
+    - command: unzip BrowserStackLocal-darwin-x64.zip
+    - wait:
+    - command: ./BrowserStackLocal --key $BROWSERSTACK_ACCESS_KEY --daemon start
+    - wait:
+    - command: npm i
+    - command: npx wdio conf/local-test.conf.js
+    - command: ./BrowserStackLocal --key $BROWSERSTACK_ACCESS_KEY --daemon stop
     key: "local_test"
