--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -1,12 +1,21 @@
 steps:
+  - label: "Local_downlaod"
+    command: wget "https://www.browserstack.com/browserstack-local/BrowserStackLocal-linux-x64.zip"
+    wait:
+    key: "Local_downlaod"
+  - label: "Local_extract"
+    command: unzip BrowserStackLocal-darwin-x64.zip
+    wait:
+    key: "Local_extract"
+  - label: "Local_start"
+    command: ./BrowserStackLocal --key $BROWSERSTACK_ACCESS_KEY --daemon start
+    wait:
+    key: "Local_start"
   - label: "Local_test"
-  - command: wget "https://www.browserstack.com/browserstack-local/BrowserStackLocal-linux-x64.zip"
-  - wait:
-  - command: unzip BrowserStackLocal-darwin-x64.zip
-  - wait:
-  - command: ./BrowserStackLocal --key $BROWSERSTACK_ACCESS_KEY --daemon start
-  - wait:
-  - command: npm i
-  - command: npx wdio conf/local-test.conf.js
-  - command: ./BrowserStackLocal --key $BROWSERSTACK_ACCESS_KEY --daemon stop
-  key: "local_test"
+    commands:
+      - npm i
+      - npx wdio conf/local-test.conf.js
+    key: "Local_test"
+  - label: "Local_stop"
+    command: ./BrowserStackLocal --key $BROWSERSTACK_ACCESS_KEY --daemon start
+    key: "Local_stop"
