--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -1,8 +1,8 @@
 steps:
   - commands:
-    - wget "https://www.browserstack.com/browserstack-local/BrowserStackLocal-linux-x64.zip"
+    - wget "https://www.browserstack.com/browserstack-local/BrowserStackLocal-darwin-x64.zip"
     - sleep 5
-    - unzip ./BrowserStackLocal-darwin-x64.zip
+    - unzip BrowserStackLocal-darwin-x64.zip
   - wait
   - command: ./BrowserStackLocal --key $BROWSERSTACK_ACCESS_KEY --daemon start
   - wait
